# fpscli

./: .clang-format  .gitignore  CMakeLists.txt  COPYING  CommandLineFPS.cpp  README.md  graphics.cpp  graphics.h  main.cpp  main.hpp  map.cpp  map.h  player.cpp  player.h  variables.h
.github/workflows/: cmake.yaml
include/: entity.h  graphics.h  input.h  main.hpp  map.h  player.h  types.h
linux/: .CommandLineFPS.cpp.swp  CMakeLists.txt  CommandLineFPS.cpp  compile.sh
res/: walls.cfg
src/: entity.cpp  graphics.cpp  main.cpp  map.cpp  player.cpp
